--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "d665a2d6-a41a-4204-807d-2c907d0c8470"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
